--- a/src/components/Metric.scss
+++ b/src/components/Metric.scss
@@ -1,17 +1,27 @@
 .metric-container {
-  border: 2px solid black;
+  border-radius: 15px;
+  box-shadow: 0px 0px 5px 5px #474872;
+  border-left: 4px double rgba(255, 255, 255, 0.788);
+  border-bottom: 4px double rgba(255, 255, 255, 0.788);
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
   width: 240px;
   height: 180px;
+  margin-bottom: 40px;
+  background-color: #373859;
 
   h3 {
     font-size: 24px;
+    font-weight: 600;
   }
 
   .result {
     display: flex;
+
+    p {
+      font-size: 22px;
+    }
   }
 }
