Feat: added some CSS

--- a/src/components/Chart.scss
+++ b/src/components/Chart.scss
@@ -1,6 +1,7 @@
 .chart-container {
   border-left: 8px double rgba(255, 255, 255, 0.788);
   border-bottom: 8px double rgba(255, 255, 255, 0.788);
+  background-color: #373859;
   height: 350px;
   max-width: 780px;
   border-radius: 15px;
