--- a/src/components/Metric.scss
+++ b/src/components/Metric.scss
@@ -1,8 +1,8 @@
 .metric-container {
   border-radius: 15px;
-  box-shadow: 0px 0px 5px 5px #474872;
-  border-left: 4px double rgba(255, 255, 255, 0.788);
-  border-bottom: 4px double rgba(255, 255, 255, 0.788);
+  box-shadow: 0px 0px 1px 3px #474872;
+  // border-left: 4px double rgba(255, 255, 255, 0.788);
+  // border-bottom: 4px double rgba(255, 255, 255, 0.788);
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
