--- a/src/components/Selector.scss
+++ b/src/components/Selector.scss
@@ -15,6 +15,7 @@
       right: 0;
       background-color: white;
       border: 2px solid black;
+      border-radius: 0 10px 10px 0;
       height: 35px;
       width: 35px;
       pointer-events: none;
@@ -35,5 +36,6 @@
     height: 35px;
     font-size: 18px;
     border: 2px solid black;
+    border-radius: 10px;
   }
 }
