--- a/src/containers/Dashboard.scss
+++ b/src/containers/Dashboard.scss
@@ -24,7 +24,15 @@
 
   .all-metrics-container {
     display: flex;
+    justify-content: center;
     gap: 30px;
     flex-wrap: wrap;
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .dashboard-container {
+    padding: 40px 30px;
   }
 }
