--- a/src/components/Selector.scss
+++ b/src/components/Selector.scss
@@ -11,12 +11,11 @@
     .arrow-container {
       position: absolute;
       z-index: 2;
-      top: 0;
-      right: 0;
+      top: 1px;
+      right: 1px;
       background-color: white;
-      border: 2px solid black;
-      height: 35px;
-      width: 35px;
+      height: 31px;
+      width: 31px;
       pointer-events: none;
 
       img {
@@ -34,6 +33,8 @@
     min-width: 200px;
     height: 35px;
     font-size: 18px;
-    border: 2px solid black;
+    border: none;
+    box-shadow: rgb(159 162 191 / 18%) 0px 9px 16px,
+      rgb(159 162 191 / 32%) 0px 2px 2px;
   }
 }
